--- a/api/.env.dist
+++ b/api/.env.dist
@@ -4,3 +4,4 @@ DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
 DATABASE_NAME=react_chicago_trello_app
+REDIS_URL=redis://localhost:6379
