--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "graphql": "^16.7.1",
+    "graphql-redis-subscriptions": "^2.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
